# hash-identifier

./: README.md
hash-identifier/: .gitignore  README.md  pyproject.toml
hash-identifier/.github/workflows/: ci.yml
hash-identifier/src/hash_identifier/: __init__.py  __main__.py  core.py  formatter.py
hash-identifier/tests/: conftest.py  test_core.py
